# GLib

./: .gitignore  CMakeLists.txt  README.md
cmake/: GLibConfig.cmake.in  GLibInstall.cmake.in
examples/ransac/: CMakeLists.txt  README.md  circle_test.cc  plane_test.cc
include/glib/math/ransac/: README.md  ransac.h  ransac_app.h  ransac_models.h
include/glib/utils/: Random.h  eigen_plugins.h  format.h
include/math/ransac/: README.md  ransac.h  ransac_app.h  ransac_models.h
include/utils/: Random.h  eigen_plugins.h  format.h
src/math/ransac/: README.md  circle_test.cc  plane_test.cc  ransac.cc  ransac_app.cc
src/utils/: Random.cc
